<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tangtuongco.apppppp.activity.AddSVActivity">


    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ImageView

            android:id="@+id/imageAvatar"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnChup"
                android:text="@string/btnPic"
                android:layout_marginTop="50dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnChon"
                android:text="@string/btnSPic"
                android:layout_marginTop="5dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:paddingLeft="40sp"
                android:textSize="20sp"
                android:text="@string/txtNameSV"
                android:layout_width="wrap_content"
                android:layout_height="50dp" />
            <TextView
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/ic_class_black_24dp"
                android:paddingLeft="40sp"
                android:textSize="20sp"
                android:text="@string/txtMaSv"
                android:layout_width="wrap_content"
                android:layout_height="50dp" />
            <TextView
                android:drawableLeft="@drawable/ic_home_black_24dp"
                android:paddingLeft="40sp"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:text="@string/txtDiaChiSV"
                android:layout_width="wrap_content"
                android:layout_height="50dp" />
            <TextView
                android:drawableLeft="@drawable/ic_phone_android_black_24dp"
                android:paddingLeft="40sp"
                android:textSize="20sp"
                android:text="@string/txtSdtSV"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="50dp" />
        </LinearLayout>
        <LinearLayout
            android:padding="6sp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/NameAdd"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />
            <EditText
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:id="@+id/CodeAdd"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/DCAdd"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />
            <EditText
                android:digits="0123456789."
                android:inputType="numberDecimal"
                android:id="@+id/SdtADD"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>
    <Button
        android:id="@+id/btnADDDDDDSV"
        android:text="@string/btnADDPB"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
