<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tangtuongco.apppppp.activity.EditPBActivity">
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txtEDTIDPB"
            android:layout_gravity="center"
            android:text="@string/txtADDPBID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edtEDTIDPB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txtEDTCODEPB"
            android:layout_gravity="center"
            android:text="@string/txtADDPBCODE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:id="@+id/edtEDTCODEPB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/btnEDTPB"
            android:text="@string/btnedtPB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/btnDELPB"
            android:text="@string/btnDELPB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
