<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tangtuongco.apppppp.activity.login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txtID"
            android:layout_gravity="center"
            android:text="@string/txtID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edtID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txtPASS"
            android:layout_gravity="center"
            android:text="@string/txtPASS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="textPassword"
            android:password="true"
            android:id="@+id/edtPASS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>
    <Button
        android:layout_gravity="center_horizontal"
        android:id="@+id/btnLOGIN"
        android:text="@string/btnDangNhap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
